# poptools

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: index.html
examples/bad-csdp-clone/: README.md  solver.py
src/poptools/: __init__.py
src/poptools/io/: __init__.py  _sdpa_sparse.py
src/poptools/linalg/: __init__.py  _blockmat.py  _psdcone.py  _vecsym.py
src/poptools/opt/: __init__.py  _sdp.py
src/poptools/random/: __init__.py  _sdps.py
tests/: test_blockmat.py  test_psdcone.py  test_sdp.py  test_sdpa_sparse.py
