[project]
name = "poptools"
version = "2025.6.17"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3",
    "scipy>=1.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pdoc3>=0.11.6",
    "scipy-stubs>=1.16"
]
